# TADS

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
consistency_precision_result/: README.md  consistency_gpt_eval.xlsx  consistency_human_eval.xlsx  precision_gpt_eval.xlsx  precision_human_eval.xlsx
data/: prepare_eval_data.sh  prepare_train_data.sh
model_finetune/: LICENSE  export_train_file.py  finetune.py  merge_lora.py  read_results.py  requirements.txt  run_pipeline.sh
model_finetune/eval/: dispatch_openai_requests.py  predict.py  templates.py  utils.py
model_finetune/eval/bbh/: run_eval.py
model_finetune/eval/gsm/: examplars.py  run_eval.py
model_finetune/eval/mmlu/: categories.py  run_eval.py
model_finetune/eval/truthfulqa/: configs.py  metrics.py  presets.py  run_eval.py  utilities.py
model_finetune/eval/tydiqa/: run_eval.py
scripts/: run_pipeline.sh
src/tads/: __init__.py  config.py  vllm_engine.py
src/tads/step1/: __init__.py  __main__.py  annotate.py  merge_targets.py  split_datasets.py
src/tads/step2/: __init__.py  __main__.py  cache_embeddings.py  cluster_tags.py  (+1 more)
step1_generate_labels/: 1dataset_splitter.py  2target_split_merge.py  3target_annotation.py
step2_clustering_and_propagating/: 1testset_tag_cluster_merge.py  2training_set_content_embedding_cache.py  3propagating_tags_using_cached_embedding.py
step3_tag_clustering_label_training_set/: 1keyword_extraction_vllm.py  2score_based_on_anchors.py  3filter_ood.py
step4_quality_task_orient/: 1mitigating_domain_shift.py  2joint_filter_fusion.py
(+12 files in other folders)
