[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tads"
version = "1.0.0"
description = "Task-Aware Data Selection via Proxy-Label Enhanced Distribution Matching for LLM Finetuning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.51.0",
    "datasets>=4.0.0",
    "vllm>=0.7.0",
    "faiss-gpu-cu12",
    "json_repair",
    "pyyaml",
    "tqdm",
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]
